--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alembic==1.4.3
+certifi==2020.11.8
 chardet==3.0.4
 click==7.1.2
 embedding-as-service-client==1.0.0
@@ -14,12 +15,14 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 numpy==1.19.4
 oauthlib==3.1.0
+pandas==1.2.3
 pickle-mixin==1.0.2
 psycopg2==2.8.6
 PySocks==1.7.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
 python-editor==1.0.4
+pytz==2021.1
 pyzmq==20.0.0
 requests==2.21.0
 requests-oauthlib==1.3.0
@@ -29,6 +32,7 @@ six==1.15.0
 sklearn==0.0
 SQLAlchemy==1.3.20
 threadpoolctl==2.1.0
+tweepy==3.9.0
 urllib3==1.24.3
 Werkzeug==1.0.1
 wincertstore==0.2
