--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 export FLASK_APP=musical_app
-export DATABASE_URL='postgres://mdlklips:3RV4qozF-rLqMXISM9TCGldcNCKySSBN@john.db.elephantsql.com:5432/mdlklips'
+export DATABASE_URI='postgres://mdlklips:3RV4qozF-rLqMXISM9TCGldcNCKySSBN@john.db.elephantsql.com:5432/mdlklips'
